# codex-tts-mcp

./: README.md  pyproject.toml
docs/: AI_EXPOSED_TOOLS.md
scripts/: codex_tts_menubar.swift  install.sh  print_codex_config.sh  uninstall.sh
src/codex_tts_mcp/: __init__.py  config.py  helper_client.py  helper_daemon.py  logging_utils.py  macos_audio.py  mcp_server.py  service.py  validation.py
tests/: test_helper_serialization.py  test_integration_helper_path.py  test_mute.py  test_speak_queue.py  test_speech_settings.py  test_validation.py  test_vocab_update.py
